# crawler_domain_education_indonesia

./: .gitignore  README_CRAWLER.md  clean_crawler.py  cleaner.py  config.py  daftar_keyword.txt  keywords.txt  main.py  new_keywords.txt  pdf_crawler.py  push_to_hf.py  pyproject.toml  requirements.txt  sites.yaml  urls.txt  zara_adjust.md  zara_adjust_1.md
core/: crawler.py
utils/: discovery.py  processor.py
