[project]
name = "aitf-sr-02-crawler"
version = "0.1.0"
description = "Tim 2 Sekolah Rakyat (AITF 2026) - Educational Crawler for CPT Dataset. Mengumpulkan konten kurikulum nasional Indonesia untuk Continued Pre-training."
requires-python = ">=3.10, <3.14"
dependencies = [
    # crawl4ai removed; using aiohttp + trafilatura extraction instead
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "psutil>=5.9",
    "huggingface-hub>=0.34.0,<1.0",
    "datasets>=4.6.1",
    "trafilatura>=2.0.0",
    "rapidfuzz>=3.0.0",
    "transformers>=4.45,<5",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
linux = ["uvloop>=0.19"]
pdf = [
    "pymupdf4llm>=1.27.2.1",
    "beautifulsoup4>=4.0.0",
    "lxml>=5.0.0",
]

[dependency-groups]
dev = []
